# SnakeDS

./: CMakeLists.txt  LICENSE  README.md
data/: background_info.grit  common.grit
data/gimp/: apple.xcf  back_button.xcf  background.xcf  background_info.xcf  background_mainmenu.xcf  background_mainmenu.xcf_trying  background_sub.xcf  exit_button.xcf  icon.xcf  menu_palette.xcf  palette.xcf  snake_body.xcf  snake_head.xcf  snake_tail.xcf  snake_turn.xcf  start_button.xcf
src/: Common.h  Grid.cpp  Grid.h  Menu.cpp  Menu.cpp__  Menu.h  Menu.h__  Snake.cpp  Snake.h  main.cpp
src/menu/: Button.cpp  Button.h  Event.h  EventManager.cpp  EventManager.h  ImageView.cpp  ImageView.h  IngameMenu.cpp  IngameMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Texture.h  Widget.h
src/old/: Snake.cpp  Snake.h
